Connected API to MongoDB Securely

--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "homepage": "https://github.com/marcosencarnacion/cse341-projects#readme",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongodb": "^6.19.0",
+    "mongodb": "^6.20.0",
     "nodemon": "^3.1.10",
     "save-dev": "^0.0.1-security"
   }
